--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
     <!-- Script -->
     <script src="js/main.js" defer></script>
     <script src="js/render.js" defer></script>
+    <script src="js/bootstrap.js" defer></script>
     <script src="js/colorHandler.js" defer></script>
 </head>
 <body>
 <!-- Navbar -->
-<header class="bg-primary position-relative">
+<header class="bg-primary position-relative" id="header">
     <nav class="container-xxl custom-width navbar navbar-expand-md px-3 px-sm-5">
         <div class="d-flex align-items-center justify-content-between w-100 text-light">
 
@@ -79,10 +80,10 @@
                         <div class="color-picker bg-altlight rounded p-2 mt-2">
                             <div class="d-flex gap-2">
                                 <div class="d-flex flex-column gap-1">
-                                    <input class="input-copy" type="color" value="#006994" id="colorChoose">
-                                    <button class="btn btn-sm btn-dark copyBtn text-light">Copy</button>
+                                    <input class="input-copy" type="color" value="#006994" id="color-choose">
+                                    <button class="btn btn-sm btn-dark copyBtn text-light" id="copy-btn">Copy</button>
                                 </div>
-                                <button class="btn btn-dark apply-btn text-light">
+                                <button class="btn btn-dark apply-btn text-light" id="apply-btn">
                                     <small class="fw-bold">Apply to Navbar</small>
                                 </button>
                             </div>
@@ -216,47 +217,36 @@
 </div>
 
 <!-- bsToast -->
-<button type="button" class="btn btn-primary" id="liveToastBtn">Show live toast</button> 
 <div class="container bs-toast">
     <div class="toast-container custom top-0 pt-2 ps-4">
         <div id="liveToast" class="toast custom text-light" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-body d-flex align-items-center justify-content-between gap-2 border custom">
-                <div class="d-flex justify-content-between align-items-center">
-                    <i id="toast-icon" class="bi bi-exclamation-triangle-fill text-info fs-5 me-2"></i>
-                    <p class="fs-6 fw-semibold me-2 mb-0">Color Copied</p>
+            <div class="toast-inner" id="toast-inner">
+                <div class="toast-progress" id="toast-progress"></div>
+                <div class="toast-body d-flex align-items-center justify-content-between gap-2 border custom">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <i id="toast-icon" class="bi bi-exclamation-triangle-fill text-info fs-5 me-2"></i>
+                        <p id="toast-message" class="fs-6 fw-semibold me-2 mb-0">Color Copied</p>
+                    </div>
+                    <button 
+                        type="button" 
+                        class="tutup bg-transparent border-0" 
+                        data-bs-dismiss="toast" 
+                        aria-label="Close"
+                        >
+                        <i class="bi bi-x fs-3 text-secondary mb-0 "></i>
+                    </button>
                 </div>
-                <button 
-                    type="button" 
-                    class="tutup bg-transparent border-0" 
-                    data-bs-dismiss="toast" 
-                    aria-label="Close"
-                    >
-                    <i class="bi bi-x fs-3 text-secondary mb-0 "></i>
-                </button>
             </div>
-            </div>
+
         </div>
     </div>
+</div>
 
 
 <script 
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js">
 </script>
-<script>
-    const toastTrigger = document.getElementById('liveToastBtn')
-    const toastLiveExample = document.getElementById('liveToast')
 
-    if (toastTrigger) {
-        const toastBootstrap = bootstrap.Toast.getOrCreateInstance(toastLiveExample, {
-            autohide: true,
-            delay: 3000,
-            animation: false,
-        })
-        toastTrigger.addEventListener('click', () => {
-            toastBootstrap.show();
-        });
-    }
-</script>
 
 </body>
 </html>
