add search bookmark

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     
     <!-- Script -->
     <script src="js/selector.js" defer></script> 
-    <script src="js/main.js" defer></script> 
     <script src="js/colorHandler.js" defer></script> 
+    <script src="js/main.js" defer></script> 
     <script src="js/util.js" defer></script>
-    <script src="js/bootstrap.js" defer></script>
     <script src="js/render.js" defer></script>
+    <script src="js/bootstrap.js" defer></script>
     <script src="js/saveToHd.js" defer></script>
 </head>
 <body>
@@ -104,10 +104,10 @@
         <div class="row justify-content-around align-items-center g-4 g-xxl-5">
             <div class="col-6 col-md-4 col-lg-3">
                 <div class="input-group input-group-sm">
-                    <input type="text" class="form-control search-custom">
+                    <input type="text" class="form-control search-custom" id="search-input" placeholder="Search bookmark">
                     <span class="input-group-text">
                         <span>
-                            <i class="bi bi-search text-dark"></i>
+                            <i class="bi bi-search text-dark" id="search-icon"></i>
                         </span>
                     </span>
                 </div>
